--- a/sass/template.scss
+++ b/sass/template.scss
@@ -49,7 +49,10 @@ body{
 }
 /*-------------------------------*/
 header{
-
+  &{
+    background-size:cover;
+    background-attachment: fixed;
+  }
 }
 /*-------------------------------*/
 a.logo{
@@ -129,6 +132,14 @@ a.logo{
   }
 }
 /*-------------------------------*/
+.linkitems{
+  & .preview{
+
+  }
+  & .modal{
+
+  }
+}
 /*-------------------------------*/
 .show{
     &-google-maps{
