--- a/sass/template.scss
+++ b/sass/template.scss
@@ -241,7 +241,7 @@ footer{
     }
   }
 }
-/*-------------------------------*/
+/*-------------------------------Manifesto-------------------------------*/
 .bicolumn{
   &{
     .body-article{
@@ -275,6 +275,14 @@ footer{
         background-position: 50%;
       }
     }
+  }
+}
+/*-------------------------------Course*-------------------------------*/
+.course{
+  &{
+
+  }
+  & .cover{
   }
 }
 /*-------------------------------*/
