Fixed bug inside intro course

--- a/sass/template.scss
+++ b/sass/template.scss
@@ -325,6 +325,9 @@ footer{
             background-repeat: no-repeat;
           }
         }
+        & .modal-footer{
+          text-align: center;
+        }
       }
   }
   & .list-courses{//Lista corsi
