--- a/scss/tmpl_desktop.scss
+++ b/scss/tmpl_desktop.scss
@@ -52,6 +52,36 @@ $color : #007707;
 	}
   }
 }
+
+.details{
+  & ul{
+	&{
+	  
+	}
+	& li{
+	  &{
+		padding:10px;
+		line-height:20px;
+		font-size:12px;
+		color: #9d9d9d;
+	  }
+	  & span{
+		font-size: 20px;
+	  }
+	  & .fa{
+		color: $color;
+	  }
+	}
+	& li.tags-list{
+	  &{
+		
+	  }
+	  & .fa-tag{
+		font-size:10px;
+	  }
+	}
+  }
+}
 ul{
   &.list{
 	&,& li, & ul{
