Manifesto completato (Check URL 2DO)
Preparazione per menu logo + dettagli sidebar

--- a/scss/tmpl_desktop.scss
+++ b/scss/tmpl_desktop.scss
@@ -63,7 +63,7 @@ form {
 .details{
   & ul{
 	&{
-	  
+
 	}
 	& li{
 	  &{
@@ -81,7 +81,7 @@ form {
 	}
 	& li.tags-list{
 	  &{
-		
+
 	  }
 	  & .fa-tag{
 		font-size:10px;
@@ -125,7 +125,7 @@ ul{
 nav.menu-user{
   &.login{
 	&{
-	  
+
 	}
 	& > ul > li > a{
 	  &{
@@ -257,7 +257,7 @@ nav.menu-user{
 /*Menu*/
 .navigator{
   &{
-	
+
   }
   & .row > div{
 	padding-right:0px;
@@ -320,7 +320,7 @@ nav.menu-user{
 /*links article*/
 .links-item{
   &{
-	
+
   }
   & .intro-article{
 	& .cover{
@@ -344,7 +344,7 @@ main.article{
   & .details{
 	& ul{
 	  &{
-		
+
 	  }
 	  & li{
 		&{
@@ -362,7 +362,7 @@ main.article{
 	  }
 	  & li.tags-list{
 		&{
-		  
+
 		}
 		& .fa-tag{
 		  font-size:10px;
@@ -385,6 +385,25 @@ main.article{
 	  background:#EFEFEF;
 	  color:#393939;
 	}
+  }
+  &.manifesto{
+    &{
+
+    }
+    & article{
+      &{
+
+      }
+      @for $i from 1 through 4{
+        &.columns-#{$i}{
+          columns:#{$i};
+          column-rule: 2px solid $color;
+          column-span: 4px;
+          column-gap: 30px;
+          text-align: justify;
+        }
+      }
+    }
   }
 }
 
